# blog

./: .env.dev  .env.prod  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  uwsgi.ini
blog/: admin.py  forms.py  libs.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_article.py  0002_auto_20200320_1150.py  0003_auto_20200319_1443.py  0003_auto_20200321_0543.py  0004_auto_20200320_0626.py  0005_auto_20200320_0749.py
core/: libs.py  settings.py  urls.py  wsgi.py
main/: urls.py  views.py
manager_tasks/: __init__.py  app.py  tasks.py
static/: style.css
templates/blog/: create_record.html  index.html  index_blog.html  index_record.html  list_other.html
templates/layout/: base.html  pagination.html
templates/main/: index.html
templates/timeline/: index.html
templates/user/: login.html
templates/users/: login.html  logout.html
timeline/: admin.py  apps.py  libs.py  models.py  urls.py  views.py
timeline/migrations/: 0001_initial.py
user/: urls.py  views.py
user/management/commands/: initadmin.py
users/: models.py  urls.py  views.py
