[tool.poetry]
name = "news_blog"
version = "0.1.0"
description = ""
authors = ["Sergey Alekseev <alekseyserzh88@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.2"
django = "3.0.4"
python-dotenv = "0.12.0"
psycopg2-binary = "2.8.4"
django-bootstrap4 = "1.1.1"
celery = "4.4.0"
redis = "3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"